--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,4 +12,16 @@
  *
  *= require_tree .
  *= require_self
+ *= require foundation_and_overrides
+
  */
+
+header {
+  margin-top: 4rem;
+}
+
+.media-object {
+  img {
+    max-width: 100%;
+  }
+}
